Note that right now, armhf/armel are building with opengl as opengles is not yet backed into upstream and opengles drivers are broken in quantal kernel
(bzr r159.1.185)

--- a/debian/control
+++ b/debian/control
@@ -10,13 +10,11 @@ Build-Depends: debhelper (>= 7.0.50~),
                libboost-dev,
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
-               libglew-dev [!armel !armhf],
-               libglewmx-dev [!armel !armhf],
+               libglew-dev,
+               libglewmx-dev,
                libxxf86vm-dev,
-               libgl1-mesa-dev (>= 7.9~git20100924-0ubuntu3) [!armel !armhf],
-               libglu1-mesa-dev [!armel !armhf],
-               libegl1-mesa-dev [armel armhf],
-               libgles2-mesa-dev [armel armhf],
+               libgl1-mesa-dev (>= 7.9~git20100924-0ubuntu3),
+               libglu1-mesa-dev,
                libxdamage-dev,
                libxcomposite-dev,
                libsigc++-2.0-dev,
@@ -67,13 +65,11 @@ Depends: libnux-2.0-0 (= ${binary:Version}),
          libgdk-pixbuf2.0-dev,
          libcairo2-dev (>= 1.9.14),
          libpng12-dev (>= 1.2.44),
-         libglew-dev [!armel !armhf],
-         libglewmx-dev [!armel !armhf],
+         libglew-dev,
+         libglewmx-dev,
          libboost-dev,
          libxxf86vm-dev,
-         libgl1-mesa-dev [!armel !armhf],
-         libegl1-mesa-dev [armel armhf],
-         libgles2-mesa-dev [armel armhf],
+         libgl1-mesa-dev,
          libsigc++-2.0-dev,
          libpango1.0-dev,
          libpcre3-dev,
