--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -81,7 +81,9 @@ gtest_nux_SOURCES = \
 if HAVE_UTOUCH_GEIS
 gtest_nux_SOURCES += \
 	geis_mock.cpp \
-  gtest-nux-geisadapter.cpp
+  gtest-nux-geisadapter.cpp \
+  gtest-nux-gesture.cpp \
+  gtest-nux-gesturebroker.cpp
 endif
 
 gtest_nux_CPPFLAGS = \
