Initial animation tests.
(bzr r628.1.7)

--- a/NuxCore/Makefile.am
+++ b/NuxCore/Makefile.am
@@ -124,6 +124,7 @@ source_tiny_xml_h = \
 
 source_h = \
   $(srcdir)/Animation.h \
+  $(srcdir)/Animation-inl.h \
   $(srcdir)/AnimationController.h \
   $(srcdir)/AsyncFileWriter.h \
   $(srcdir)/EasingCurve.h \
