* Adds an interpreter to test different IMs
(bzr r637.5.1)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -24,6 +24,7 @@ check_PROGRAMS = \
   xtest-text-entry-deadkeys \
   xtest-text-entry-compositionkeys \
   xtest-text-entry-logic \
+  xtest-text-entry-xim \
   xtest-focus-on-mouse-enter
 
 gtest_nuxcore_SOURCES = \
@@ -250,6 +251,14 @@ xtest_text_entry_compositionkeys_CPPFLAGS = $(TestFlags)
 xtest_text_entry_compositionkeys_LDADD = $(TestLibs)
 xtest_text_entry_compositionkeys_LDFLAGS = -lpthread -lXtst
 
+xtest_text_entry_xim_SOURCES = xtest-text-entry-xim.cpp \
+  nux_automated_test_framework.cpp \
+  nux_automated_test_framework.h
+
+xtest_text_entry_xim_CPPFLAGS = $(TestFlags)
+xtest_text_entry_xim_LDADD = $(TestLibs)
+xtest_text_entry_xim_LDFLAGS = -lpthread -lXtst
+
 #run make test as part of make check
 check-local: test gtest test-apps
 
@@ -263,7 +272,7 @@ gtest: gtest-nuxcore gtest-nux
 check-headless: gtest-nuxcore
 	@gtester --verbose -k -o=test-nux-results.xml ./gtest-nuxcore
 
-test-apps: test-graphics-display test-empty-window xtest-text-entry xtest-button xtest-mouse-events xtest-mouse-buttons xtest-hgrid-key-navigation xtest-hlayout-key-navigation xtest-vlayout-key-navigation xtest-scrollbar xtest-focus-on-mouse-down xtest-focus-on-mouse-enter xtest-keynav-directions xtest-text-entry-logic xtest-text-entry-deadkeys xtest-text-entry-compositionkeys
+test-apps: test-graphics-display test-empty-window xtest-text-entry-xim xtest-text-entry xtest-button xtest-mouse-events xtest-mouse-buttons xtest-hgrid-key-navigation xtest-hlayout-key-navigation xtest-vlayout-key-navigation xtest-scrollbar xtest-focus-on-mouse-down xtest-focus-on-mouse-enter xtest-keynav-directions xtest-text-entry-logic xtest-text-entry-deadkeys xtest-text-entry-compositionkeys
 	./test-graphics-display
 	./test-empty-window
 	./xtest-text-entry
@@ -280,7 +289,7 @@ test-apps: test-graphics-display test-empty-window xtest-text-entry xtest-button
 	./xtest-text-entry-logic
 	./xtest-text-entry-deadkeys
 	./xtest-text-entry-compositionkeys
-  
+
 
 check-report:
 	@gtester -k -o=test-nux-results.xml -k ./test-nux \
