Update build-dep to libgeis-dev for the great renaming transition.
(bzr r159.1.192)

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                libpcre3-dev,
                libpci-dev,
                libxinerama-dev,
-               libutouch-geis-dev,
+               libgeis-dev,
                libibus-1.0-dev,
                libxtst-dev,
                gcc-4.6,
