* debian/control:   - build-dep on a recent geis
(bzr r159.1.197)

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                libpcre3-dev,
                libpci-dev,
                libxinerama-dev,
-               libgeis-dev,
+               libgeis-dev (>= 2.2.10),
                libibus-1.0-dev,
                libxtst-dev,
                gcc-4.6,
