* Reworks the XIM stuff around. Though there are problems still with closing/opening new IMs....
(bzr r637.5.20)

--- a/NuxGraphics/Makefile.am
+++ b/NuxGraphics/Makefile.am
@@ -91,7 +91,8 @@ source_h = \
   $(srcdir)/RunTimeStats.h \
   $(srcdir)/VirtualKeyCodesX11.h \
   $(srcdir)/XInputWindow.h \
-  $(srcdir)/XIMClient.h
+  $(srcdir)/XICClient.h \
+  $(srcdir)/XIMController.h
 
 if HAVE_GEIS
 source_h += \
@@ -159,7 +160,8 @@ source_cpp = \
   $(srcdir)/GLRenderingAPI.cpp \
   $(srcdir)/RunTimeStats.cpp \
   $(srcdir)/XInputWindow.cpp \
-  $(srcdir)/XIMClient.cpp
+  $(srcdir)/XICClient.cpp \
+  $(srcdir)/XIMController.cpp
 
 if HAVE_GEIS
 source_cpp += \
