tests: added TestInputArea to check the ungrab on destroy
(bzr r651.3.2)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -77,6 +77,7 @@ gtest_nux_SOURCES = \
   gtest-nux-textentry.cpp \
   gtest-nux-utils.h \
   gtest-nux-inputmethodibus.cpp \
+  gtest-nux-input-area.cpp \
   gtest-nux-view.cpp \
   gtest-nux-windowcompositor.cpp \
   gtest-nux-windowthread.cpp
