resolves unresolved libraries (lp: #680168 )
Unresolved shared libraries cause applications building against the Nux
libraries to FTBFS when using the GNU gold linker or building with
--as-needed.

To reproduce the FTBFS, install the binutils-gold package and rebuild
nux and unity.  Unity will fail to build because libnux-core can not
resolve sumbols such as pthread-create.

Fixes LP: #680168

(bzr r653.1.1)

--- a/NuxCore/Makefile.am
+++ b/NuxCore/Makefile.am
@@ -19,7 +19,7 @@ libnux_core_@NUX_API_VERSION@_la_CPPFLAGS= \
   $(MAINTAINER_CFLAGS)
 
 libnux_core_@NUX_API_VERSION@_la_LIBADD = \
-  $(NUX_CORE_LIBS)
+  $(NUX_CORE_LIBS) -lpthread
 
 libnux_core_@NUX_API_VERSION@_la_LDFLAGS = \
   $(NUX_LT_LDFLAGS)
