--- a/.bzrignore
+++ b/.bzrignore
@@ -31,6 +31,7 @@ examples/canvas
 examples/checkbox
 examples/combobox
 examples/coverflow
+examples/flickable
 examples/focus
 examples/gestures
 examples/gridlayout
@@ -60,8 +61,10 @@ gputests/texture_data
 gputests/texture_power_of_2
 tests/Logs
 tests/Makefile
+tests/gtest-nux
 tests/gtest-nux-core
 tests/gtest-nuxcore
+tests/gtest-nux-slow
 tests/test-nux
 tests/test-nux-results.xml
 tests/relative
