Added example application for nux::Flickable
(bzr r682.1.3)

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -9,7 +9,8 @@ if BUILD_EXAMPLES
 
 noinst_PROGRAMS = text_entry_focus \
   shortcut_keys \
-  coverflow
+  coverflow \
+  flickable
 
 #button \
 #                  cairo \
@@ -110,6 +111,9 @@ shortcut_keys_LDADD = $(ALL_LIBS)
 
 coverflow_SOURCES = coverflow.cpp
 coverflow_LDADD = $(ALL_LIBS)
+
+flickable_SOURCES = flickable.cpp TestButton.cpp
+flickable_LDADD = $(ALL_LIBS)
 
 if HAVE_GEIS
 gestures_SOURCES = gestures.cpp
