--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -10,7 +10,7 @@ if BUILD_EXAMPLES
 noinst_PROGRAMS = text_entry_focus \
   shortcut_keys \
   coverflow \
-  flickable
+  kinetic_scroll_view
 
 #button \
 #                  cairo \
@@ -112,8 +112,8 @@ shortcut_keys_LDADD = $(ALL_LIBS)
 coverflow_SOURCES = coverflow.cpp
 coverflow_LDADD = $(ALL_LIBS)
 
-flickable_SOURCES = flickable.cpp TestButton.cpp
-flickable_LDADD = $(ALL_LIBS)
+kinetic_scroll_view_SOURCES = kinetic_scroll_view.cpp TestButton.cpp
+kinetic_scroll_view_LDADD = $(ALL_LIBS)
 
 if HAVE_GEIS
 gestures_SOURCES = gestures.cpp
