--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -57,7 +57,6 @@ source_cpp = \
   $(srcdir)/DoubleValidator.cpp \
   $(srcdir)/EditTextBox.cpp \
   $(srcdir)/FileSelector.cpp \
-  $(srcdir)/Flickable.cpp \
   $(srcdir)/FloatingWindow.cpp \
   $(srcdir)/GridHLayout.cpp \
   $(srcdir)/GroupBox.cpp \
@@ -72,8 +71,9 @@ source_cpp = \
   $(srcdir)/KineticScrolling/AxisDecelerationAnimation.cpp \
   $(srcdir)/KineticScrolling/KineticAxisScroller.cpp \
   $(srcdir)/KineticScrolling/KineticScroller.cpp \
-  $(srcdir)/KineticScrolling/FlickableTickSource.cpp \
+  $(srcdir)/KineticScrolling/KineticScrollingTickSource.cpp \
   $(srcdir)/KineticScrolling/VelocityCalculator.cpp \
+  $(srcdir)/KineticScrollView.cpp \
   $(srcdir)/LayeredLayout.cpp \
   $(srcdir)/Layout.cpp \
   $(srcdir)/LinearLayout.cpp \
@@ -159,7 +159,6 @@ source_h = \
   $(srcdir)/EditTextBox.h \
   $(builddir)/Features.h \
   $(srcdir)/FileSelector.h \
-  $(srcdir)/Flickable.h \
   $(srcdir)/FloatingWindow.h \
   $(srcdir)/GridHLayout.h \
   $(srcdir)/GroupBox.h \
@@ -174,8 +173,9 @@ source_h = \
   $(srcdir)/KineticScrolling/AxisDecelerationAnimation.h \
   $(srcdir)/KineticScrolling/KineticAxisScroller.h \
   $(srcdir)/KineticScrolling/KineticScroller.h \
-  $(srcdir)/KineticScrolling/FlickableTickSource.h \
+  $(srcdir)/KineticScrolling/KineticScrollingTickSource.h \
   $(srcdir)/KineticScrolling/VelocityCalculator.h \
+  $(srcdir)/KineticScrollView.h \
   $(srcdir)/LayeredLayout.h \
   $(srcdir)/Layout.h \
   $(srcdir)/LinearLayout.h \
