--- a/configure.ac
+++ b/configure.ac
@@ -342,6 +342,9 @@ if test "x$GCC" = "xyes"; then
   GCC_FLAGS="-g -Wall -Wextra -Werror -std=c++0x"
 fi
 
+# gcc flags for building the tests.
+GCC_TESTS_FLAGS="-g -Wall -Wextra -std=c++0x"
+
 # use strict compiler flags only on development releases
 m4_define([maintainer_mode_default], [m4_if(m4_eval(nux_micro_version % 2), [1], [yes], [no])])
 AC_ARG_ENABLE([maintainer-mode],
@@ -371,6 +374,7 @@ AS_IF([test "x$enable_debug" = "xyes"],
 )
 
 AC_SUBST(GCC_FLAGS)
+AC_SUBST(GCC_TESTS_FLAGS)
 AC_SUBST(MAINTAINER_CFLAGS)
 
 # this enables lots of useful debugging output in Nux
