--- a/debian/rules
+++ b/debian/rules
@@ -26,11 +26,12 @@ endif
 NUX_ABIVERSION := $(shell sed -rn 's/^\#define[[:space:]]+NUX_ABIVERSION[[:space:]]+//p' Nux/ABI.h )
 
 override_dh_install:
-	rm debian/tmp/usr/lib/*la
+	rm debian/tmp/usr/lib/*/*la
 	rm -rf debian/tmp/usr/share/nux/gputests/
 	dh_install --fail-missing
 
 override_dh_auto_test:
+	make check-headless
 
 override_dh_gencontrol:
 	dh_gencontrol -- -Vnuxabiversion=$(NUX_ABIVERSION)
