enable headless tests during build
(bzr r708.3.1)

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,10 @@ Build-Depends: debhelper (>= 9),
                libglib2.0-dev (>= 2.25.14),
                libgdk-pixbuf2.0-dev,
                libboost-dev,
+               libboost-filesystem-dev,
+               libboost-system-dev,
+               libgtest-dev,
+               google-mock,
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
                libglew-dev [!armel !armhf],
