--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -10,6 +10,7 @@ check_PROGRAMS = \
   gtest-nux \
   gtest-nux-slow \
   gtest-nuxcore \
+  gtest-nuxgraphics \
   test-graphics-display \
   test-empty-window \
   xtest-button \
@@ -26,6 +27,8 @@ check_PROGRAMS = \
   xtest-text-entry-compositionkeys \
   xtest-text-entry-logic \
   xtest-focus-on-mouse-enter
+
+##### gtest-nuxcore ######
 
 gtest_nuxcore_SOURCES = \
   Helpers.h \
@@ -153,6 +156,39 @@ gtest_nux_slow_LDADD = \
 gtest_nux_slow_LDFLAGS = \
   -lpthread -lgmock \
   -lboost_filesystem -lboost_system
+
+##### gtest-nuxgraphics ######
+
+gtest_nuxgraphics_SOURCES = \
+  gtest-nuxgraphics-main.cpp \
+  gtest-nuxgraphics-texture.cpp
+
+gtest_nuxgraphics_CPPFLAGS = \
+  -I$(srcdir) \
+  -I$(top_srcdir) \
+  -DPREFIX=\""$(prefix)"\" \
+  -DLIBDIR=\""$(libdir)"\" \
+  -DDATADIR=\""$(datadir)"\" \
+  -DG_LOG_DOMAIN=\"NuxTests\" \
+  -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GCC_TESTS_FLAGS) \
+  $(NUX_CORE_CFLAGS) \
+  $(NUX_EXAMPLES_CFLAGS) \
+  $(NUX_CFLAGS) \
+  $(MAINTAINER_CFLAGS)
+
+gtest_nuxgraphics_LDADD = \
+  $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
+  $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
+  $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
+  $(NUX_LIBS) \
+  libgtest.a
+
+gtest_nuxgraphics_LDFLAGS = \
+  -lpthread -lgmock \
+  -lboost_filesystem -lboost_system
+
+
 
 TestFlags = -I$(srcdir) \
   -I$(top_srcdir) \
@@ -306,8 +342,9 @@ check-local: test gtest test-apps
 test:
 	@gtester --verbose -k -o=gtest-nux-results.xml ./gtest-nux
 
-gtest: gtest-nuxcore gtest-nux
+gtest: gtest-nuxcore gtest-nuxgraphics gtest-nux
 	./gtest-nuxcore
+	./gtest-nuxgraphics
 	./gtest-nux
 
 check-headless: gtest-nuxcore
